maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:29: error: type mismatch;
 found   : Unit
 required: Array[Int]
  for (i <- 1 to hauteurMonde) {
         ^